# wavs-demos

./: .env.example  .gitignore  .gitmodules  Cargo.toml  HYPERSTITION_MARKET_DEMO.md  Makefile  NFT_DEMO.md  PREDICTION_MARKET_DEMO.md  README copy.md  README.md  SAFE_GUARD_DEMO.md  SAFE_MODULE_DEMO.md  foundry.toml  package-lock.json  package.json  remappings.txt
app/: Cargo.toml
app/src/: main.rs
components/autonomous-artist/: Cargo.toml
components/autonomous-artist/src/: lib.rs
components/dao-agent/: Cargo.toml
components/dao-agent/src/: bindings.rs  integration_tests.rs  lib.rs
components/dao-agent/wit/: lay3r_avs@0.3.0.wit
components/eth-price-oracle/: Cargo.toml
components/fetch-url/: Cargo.toml
components/fetch-url/src/: lib.rs
components/guard/: Cargo.toml
components/guard/src/: bindings.rs  lib.rs
components/hyperstition-market-resolver/: Cargo.toml
components/hyperstition-market-resolver/src/: lib.rs
components/hyperstition-oracle/: Cargo.toml  README.md
components/ipfs-upload/: Cargo.toml
components/ipfs-upload/src/: bindings.rs  lib.rs
components/prediction-market-oracle/: Cargo.toml  README.md
components/prediction-market-oracle/src/: lib.rs  trigger.rs
crates/bindings/src/: accesscontrol.rs  addressupgradeable.rs  addtrigger.rs  approvesafetransactionscript.rs  arrays.rs  baseguard.rs  checkpoints.rs  checkpointsupgradeable.rs  clones.rs  commonbase.rs  conditionaltokens.rs  console.rs  context.rs  cthelpers.rs  deploynftwithtrigger.rs  deploysafeguardscript.rs  deploysafemodule.rs  ecdsa.rs  ecdsastakeregistry.rs  ecdsaupgradeable.rs  eip712.rs  erc1155.rs  erc165.rs  erc20.rs  erc20mintable.rs  erc721.rs  erc721burnable.rs  erc721pausable.rs  erc721uristorage.rs  erc721votes.rs  executesafetransactionscript.rs  executor.rs  fallbackmanager.rs  fixed192x64math.rs  guard.rs  guardmanager.rs  iaccesscontrol.rs  iconditionaltokens.rs  ierc1155.rs  ierc1155errors.rs  (+98 more)
demos/: NFT_AI_DEMO.md  PREDICTION_MARKET_DEMO.md  SAFE_AI_MODULE_DEMO.md  SAFE_GUARD_DEMO.md
script/: DeployNFTWithTrigger.s.sol  HyperstitionMarket.s.sol  PredictionMarket.s.sol  SafeGuard.s.sol  SafeModule.s.sol  SafeSetup.s.sol  Trigger.s.sol
src/: HyperstitionMarketFactory.sol  HyperstitionOracleController.sol  NFTWithTrigger.sol  PredictionMarketFactory.sol  PredictionMarketOracleController.sol  SafeGuard.sol  SafeModule.sol  WavsConditionalMarket.sol  WavsSDK.sol
src/interfaces/: IConditionalTokens.sol  IWavsSDK.sol  IWavsTrigger.sol
test/: NFTWithTrigger.t.sol  SafeGuard.t.sol  SafeModule.t.sol  WavsConditionalMarket.t.sol
test/mocks/: MockConditionalTokens.sol  MockERC20.sol
