[package]
name = "hyperstition-oracle"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
layer-wasi = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
wit-bindgen-rt = { workspace = true, features = ["bitflags"] }
hex = "0.4.3"
ethabi = "18.0.0"
primitive-types = "0.13.1"
alloy-primitives = "0.8.13"
alloy-sol-types = "0.8.13"
base64 = "0.22.1"

[dev-dependencies]
mockall = "0.11"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:hyperstition-oracle"

[package.metadata.component.target]
world = "layer-trigger-world"

[package.metadata.component.target.dependencies]
"wasi:io" = "=0.2.0"
"wasi:clocks" = "=0.2.0"
"wasi:http" = "=0.2.0"
"wasi:random" = "=0.2.0"
"wasi:cli" = "=0.2.0"
