[package]
name = "ipfs-upload"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = {workspace = true} 
wit-bindgen-rt = {workspace = true}
alloy-sol-macro = {workspace = true}
alloy-sol-types = {workspace = true}
wavs-wasi-chain = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
wstd = {workspace = true}

[package.metadata.component]
package = "wavs:ipfs-upload"
target = "wavs:worker/layer-trigger-world@0.3.0-alpha2"
